# mrs_uav_trajectory_loader

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.ci/: ci_before_install.sh  install.sh
ball_trajectory/: eight_traj.csv
config/: README.md  circle.yaml  circle_10_5.yaml  circle_15_8.yaml  defaults.yaml  eight_8ms.yaml  example_params.yaml  hexagon.yaml  line_50.yaml  line_follow.yaml  octagon.yaml  params.yaml  quick_leave.yaml  random_zig_zag.yaml  side_to_side.yaml  sinus.yaml  square.yaml  square_down.yaml  square_up.yaml  zig_zag.yaml  zig_zag_follow.yaml
custom_trajectories/: _generate_trajectory_path.py  base.csv  circle_flier.csv  circle_observer.csv  hexagon.csv  line_follow.csv  octagon.csv  quick_leave.csv  random_zig_zag.csv  side_to_side.csv  sinus.csv  square.csv  square_down.csv  square_up.csv  zig_zag.csv
include/: trajectory_loader.h
launch/: circle_3_7.launch  circle_5.launch  common.launch  dan.launch  dop.launch  goto_start.launch  load.launch  matej1.launch  matej2.launch  matej3.launch  multimaster_fly_to_start.launch  multimaster_start_following.launch  multimaster_start_tracking.launch  multimaster_trajectories_loader.launch  multisom.launch  petr.launch  robert.launch  simulation.launch  single_trajectory_from_file.launch  start_tracking.launch  sweeping.launch  sweeping2.launch  sweeping3.launch  tomas.launch  trajectory_from_file.launch  viktorA_1.launch  viktorA_2.launch  viktorB_1.launch  viktorB_2.launch  viktorC_1.launch  viktorC_2.launch
launch/loading_examples/: load_circle_10_5.launch  load_circle_15_8.launch  load_eight_8ms.launch  load_line_50.launch  single_uav.launch
sample_trajectories/: circle_15_8.txt  trajectory2.txt
sample_trajectory/: circle_10.txt  circle_10_5.txt  circle_15_8.txt  eight_8ms.txt  line_50.txt  trajectory1.txt  trajectory3.txt
src/: main.cpp  trajectory_loader.cpp
trajectories/: trajectoryA_1.txt  trajectoryA_2.txt  trajectoryB_1.txt  trajectoryB_2.txt  trajectoryC_1.txt  trajectoryC_2.txt
trajectories/best-2/r0-s0/: path.txt  solution-2.txt  solution.txt  stat.cvs
trajectories/best-2/r0-s3/: path.txt  solution-2.txt  solution.txt  stat.cvs  stat.len
trajectories/best-2/r5-s0/: path.txt  solution-2.txt  solution.txt  stat.cvs  stat.len
trajectories/best-2/r5-s3/: path.txt  solution-2.txt  solution.txt  stat.cvs  stat.len
trajectories/best-2/r6-s0/: path.txt  solution-2.txt  solution.txt  stat.cvs  stat.len
trajectories/best-2/r6-s3/: path.txt  solution-2.txt  solution.txt  stat.cvs  stat.len
trajectories/circle/: circle_3.path  circle_5.path
trajectories/collision/: path.txt
trajectories/dan/: fol1.txt  fol2.txt  fol3.txt  fol4.txt
trajectories/dop/path1/: info.txt  path.canvas.txt  path.path  path.txt  sampled-path.txt  settings.txt  targets.txt
trajectories/dop/path2/: info.txt  (+4 more)
trajectories/fifth/: robot0.targets  robot0.targetsGazebo  robot0_speed4.path  robot1.targets  robot1.targetsGazebo  robot1_speed4.path  robot2.targets  robot2.targetsGazebo  robot2_speed4.path
trajectories/first/: all.targets  robot0.targets  robot0_speed1.path  robot0_speed3.path  robot0_speed5.path  robot1.targets  robot1_speed1.path  robot1_speed3.path  robot1_speed5.path  robot2.targets  robot2_speed1.path  robot2_speed3.path  robot2_speed5.path
trajectories/fourth/: all.targets  all.targetsGazebo  robot0.targets  robot0.targetsGazebo  robot0_speed2.path  robot1.targets  robot1.targetsGazebo  robot1_speed2.path  robot2.targets  robot2.targetsGazebo  robot2_speed2.path
trajectories/matej/: uav1.txt  uav2.txt  uav3.txt
trajectories/multisom/: path.txt
trajectories/petrvana/: baca-0.txt  baca-1.txt  baca-2.txt
trajectories/second/: robot0.targets  robot0.targetsGazebo  robot0_speed1.path  robot0_speed3.path  robot0_speed5.path  robot1.targets  robot1.targetsGazebo  robot1_speed1.path  robot1_speed3.path  robot1_speed5.path  robot2.targets  robot2.targetsGazebo  robot2_speed1.path  robot2_speed3.path  robot2_speed5.path
trajectories/sweep/: robot0_speed2_sweep.path  robot0_speed40_sweep.path  robot0_speed4_sweep.path  robot1_speed2_sweep.path  robot1_speed40_sweep.path  robot1_speed4_sweep.path  robot2_speed2_sweep.path  robot2_speed40_sweep.path  robot2_speed4_sweep.path
trajectories/third/: all.targetsGazebo  robot0.targets  robot0.targetsGazebo  robot0_speed1.path  robot0_speed3.path  robot0_speed5.path  robot1.targets  robot1.targetsGazebo  robot1_speed1.path  robot1_speed3.path  robot1_speed5.path  robot2.targets  robot2.targetsGazebo  robot2_speed1.path  robot2_speed3.path  robot2_speed5.path
trajectories/tomas/: traj_17_2_swapped.txt
(+97 files in other folders)
