<?xml version="1.0"?>
<package format="2">

  <name>trajectory_loader</name>
  <version>0.0.1</version>
  <description>The trajectory_handler package</description>

  <author email="vojtech.spurny@fel.cvut.cz">Vojta Spurny</author>
  <maintainer email="vojtech.spurny@fel.cvut.cz">Vojta Spurny</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mrs_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export>
  </export>

</package>
