<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_trajectory_loader</name>
  <version>1.0.0</version>
  <description>A package for loading trajectories and calling multiple trigger messages.</description>

  <author email="vojtech.spurny@fel.cvut.cz">Vojta Spurny</author>
  <maintainer email="vojtech.spurny@fel.cvut.cz">Tomas Baca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>mrs_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <export>
  </export>

</package>
